--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
     "debug": "./node_modules/.bin/nodemon ./bin/www"
   },
   "dependencies": {
-    "bearer-token": "^2.0.1",
-    "body-parser": "~1.17.1",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.3",
-    "ejs": "~2.5.6",
-    "express": "~4.15.2",
-    "jsonwebtoken": "^8.0.1",
-    "request": "^2.82.0",
-    "serve-favicon": "~2.4.2"
+    "bearer-token": "2.0.1",
+    "body-parser": "1.17.1",
+    "cookie-parser": "1.4.3",
+    "debug": "2.6.3",
+    "ejs": "2.5.6",
+    "express": "4.15.2",
+    "jsonwebtoken": "8.0.1",
+    "request": "2.82.0",
+    "serve-favicon": "2.4.2"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
