--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,19 @@ services:
   concha_gateway_browser:
     build: .
     volumes:
+      # Make the following directories available to docker so that changes can be made on the
+      # host and immediately be available to docker.
       - ./src:/app/src
+      - ./test:/app/test
+
+      # Make package.json available to Docker so that new packages added during the test/develop
+      # lifecycle are reflected back to the host.
+      - ./package.json:/app/package.json
+
+      # Make npm-shrinkwrap.json available to Docker so that changes made by npm shrinkwrap 
+      # in the docker container are reflected back to the host, which can subsequently commit
+      # the changes to github.
+      - ./npm-shrinkwrap.json:/app/npm-shrinkwrap.json
+    command: npm run debug
     ports:
       - 80:80
