--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,18 +4,18 @@ services:
   concha_gateway_browser:
     build: .
     volumes:
-      # Make the following directories available to docker so that changes can be made on the
-      # host and immediately be available to docker.
+      # Make the following directories available to docker so that changes made on the host
+      # are immediately available inside the docker container.
       - ./src:/app/src
       - ./test:/app/test
 
       # Make package.json available to Docker so that new packages added during the test/develop
-      # lifecycle are reflected back to the host.
+      # lifecycle are reflected back to the host, where they can be commited to github.
       - ./package.json:/app/package.json
 
       # Make npm-shrinkwrap.json available to Docker so that changes made by npm shrinkwrap 
-      # in the docker container are reflected back to the host, which can subsequently commit
-      # the changes to github.
+      # in the docker container are reflected back to the host, where they can be committed to
+      # github.
       - ./npm-shrinkwrap.json:/app/npm-shrinkwrap.json
     command: npm run debug
     ports:
